src/components/to-do/task/styles.css
li{
    display: flex;
    justify-content: space-between;
    align-items: center;
    min-height: 50px;
    background-color: #F2F2F2;
    padding: 10px;
    border-radius: 12px;
    border: 4px solid transparent;
}
.icon{
    width: 30px;
    height: 100%;
    transition: 0.5s;
}
.icon:hover{
    transform: scale(1.2);
}
.completed-task-icon{
    fill: #4043C9;
}
.completed-task-icon:hover li{
    background-color: #4043C9;
}
.task-container{
    display: flex;
    justify-content: center;
    align-items: center;
    color: #4043C9;
    width: 100%;
}


/* // completed task */
.task-completed{
    font-style: italic;
    text-decoration: line-through;
    color: rgba(58, 58, 58, 0.54);
}

/* delte task  */
.delete-task-icon{
    fill: red;
}
.maybe-delete-background-red{
    transition: 1s;
    border: 4px solid red;
}
@media (width < 1000px){
    .task-container{
        padding: 0 20px;
    }
}

